# ue5-dumper-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: codegen.rs  lib.rs  main.rs  mem.rs  scanner.rs
src/ue/: fname.rs  mod.rs  objects.rs  offsets.rs  props.rs
