[package]
name = "ue5-dumper"
version = "0.1.0"
edition = "2021"
description = "Unreal Engine 5 SDK dumper. Reads remote process memory via process_vm_readv on Linux (Wine/Proton supported) and ReadProcessMemory on Windows."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jviguy/ue5-dumper-rs"
keywords = ["unreal", "ue5", "sdk", "dumper", "reverse-engineering"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "ue5_dumper"
path = "src/lib.rs"

[[bin]]
name = "ue5-dumper"
path = "src/main.rs"

[[bin]]
name = "esp"
path = "src/bin/esp.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
